load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "auth",
    srcs = [
        "events.go",
        "jwt.go",
    ],
    importpath = "github.com/JohnnyS318/RoyalAfgInGo/pkg/auth",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config",
        "//pkg/models",
        "//pkg/mw",
        "@com_github_form3tech_oss_jwt_go//:jwt-go",
        "@com_github_google_uuid//:uuid",
        "@com_github_spf13_viper//:viper",
    ],
)
