load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "auth",
    srcs = [
        "events.go",
        "jwt.go",
    ],
    importpath = "github.com/JohnnyS318/RoyalAfgInGo/pkg/auth",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config",
        "//pkg/models",
        "//pkg/mw",
        "@com_github_form3tech_oss_jwt_go//:jwt-go",
        "@com_github_google_uuid//:uuid",
        "@com_github_spf13_viper//:viper",
    ],
)

go_test(
    name = "auth_test",
    srcs = ["jwt_test.go"],
    embed = [":auth"],
    deps = [
        "//pkg/config",
        "//pkg/models",
        "@com_github_spf13_viper//:viper",
        "@com_github_stretchr_testify//assert",
        "@org_mongodb_go_mongo_driver//bson/primitive",
    ],
)
