load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "command.go",
        "types.go",
    ],
    importpath = "github.com/JohnnyS318/RoyalAfgInGo/pkg/bank",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/dtos:go_default_library",
        "@com_github_rhymond_go_money//:go_default_library",
    ],
)
