load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "bank",
    srcs = [
        "command.go",
        "types.go",
    ],
    importpath = "github.com/JohnnyS318/RoyalAfgInGo/pkg/bank",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/dtos",
        "@com_github_rhymond_go_money//:go-money",
    ],
)
