load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "bank",
    srcs = [
        "command.go",
        "rabbit.go",
        "types.go",
    ],
    importpath = "github.com/jonsch318/royalafg/pkg/bank",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config",
        "//pkg/dtos",
        "//pkg/errors",
        "@com_github_rhymond_go_money//:go-money",
        "@com_github_spf13_viper//:viper",
        "@com_github_streadway_amqp//:amqp",
    ],
)
