load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = [
        "constants.go",
        "defaults.go",
        "queues.go",
        "viper.go",
    ],
    importpath = "github.com/JohnnyS318/RoyalAfgInGo/pkg/config",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_mitchellh_go_homedir//:go-homedir",
        "@com_github_spf13_pflag//:pflag",
        "@com_github_spf13_viper//:viper",
        "@org_uber_go_zap//:zap",
    ],
)
