load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/JohnnyS318/RoyalAfgInGo/pkg/docs",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/docs/cmd:go_default_library",
    ],
)

filegroup(
    name = "config",
    srcs = [
        "docs_service.yaml",
        "swagger.yaml",
    ],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "docs",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "image",
    base = "@alpine_linux_amd64//image",
    entrypoint = ["/docs"],
    files = [
        ":config",
        ":docs",
    ],
)

container_push(
    name = "push_image",
    format = "Docker",
    image = ":image",
    registry = "index.docker.io",
    repository = "johnnys318/royalafg-docs",
)
