load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "dtos",
    srcs = [
        "auth.go",
        "bank.go",
        "currency.go",
        "poker.go",
        "slot.go",
        "user.go",
    ],
    importpath = "github.com/jonsch318/royalafg/pkg/dtos",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/models",
        "//pkg/poker/models",
        "@com_github_rhymond_go_money//:go-money",
    ],
)
