load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "errors",
    srcs = [
        "auth.go",
        "bank.go",
        "crypto.go",
        "poker.go",
        "pokerMatchmaker.go",
        "rabbit.go",
    ],
    importpath = "github.com/jonsch318/royalafg/pkg/errors",
    visibility = ["//visibility:public"],
)
