load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "log",
    srcs = [
        "logger.go",
        "register.go",
    ],
    importpath = "github.com/jonsch318/royalafg/pkg/log",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_mitchellh_go_homedir//:go-homedir",
        "@in_gopkg_natefinch_lumberjack_v2//:lumberjack_v2",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)
