load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "http.go",
        "interface.go",
        "prometheus.go",
    ],
    importpath = "github.com/JohnnyS318/RoyalAfgInGo/pkg/metrics",
    visibility = ["//visibility:public"],
    deps = ["@com_github_prometheus_client_golang//prometheus:go_default_library"],
)
