load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mw",
    srcs = [
        "auth.go",
        "logging.go",
        "metrics.go",
    ],
    importpath = "github.com/JohnnyS318/RoyalAfgInGo/pkg/mw",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/metrics:go_default_library",
        "//pkg/responses",
        "//pkg/utils",
        "@com_github_form3tech_oss_jwt_go//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
