load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mw",
    srcs = [
        "auth.go",
        "csrf.go",
        "zap.go",
    ],
    importpath = "github.com/jonsch318/royalafg/pkg/mw",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config",
        "//pkg/responses",
        "@com_github_auth0_go_jwt_middleware//:go-jwt-middleware",
        "@com_github_form3tech_oss_jwt_go//:jwt-go",
        "@com_github_spf13_viper//:viper",
        "@com_github_urfave_negroni//:negroni",
        "@org_uber_go_zap//:zap",
    ],
)
