load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/JohnnyS318/RoyalAfgInGo/pkg/user",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/user/cmd:go_default_library",
    ],
)

go_binary(
    name = "user",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "image",
    base = "@alpine_linux_amd64//image",
    entrypoint = ["/user"],
    files = [
        ":user",
        "//.RoyalAfgInGo.d:config",
    ],
    visibility = ["//visibility:public"],
)
