load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "utils",
    srcs = [
        "grpc.go",
        "httpserver.go",
        "mongo.go",
    ],
    importpath = "github.com/JohnnyS318/RoyalAfgInGo/pkg/utils",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gorilla_schema//:go_default_library",
        "@com_github_kamva_mgm//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo/options:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
