load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "utils",
    srcs = [
        "grpc.go",
        "httpUtils.go",
        "httpserver.go",
        "mongo.go",
    ],
    importpath = "github.com/JohnnyS318/RoyalAfgInGo/pkg/utils",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gorilla_schema//:schema",
        "@com_github_kamva_mgm//:mgm",
        "@org_golang_google_grpc//:grpc",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
        "@org_uber_go_zap//:zap",
    ],
)
