load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_library(
    name = "auth_lib",
    srcs = ["main.go"],
    importpath = "github.com/JohnnyS318/RoyalAfgInGo/services/auth",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/config",
        "//pkg/log",
        "//services/auth/pkg",
        "//services/auth/pkg/serviceconfig",
    ],
)

go_binary(
    name = "auth",
    embed = [":auth_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "royalafg_auth",
    embed = [":auth_lib"],
    visibility = ["//visibility:public"],
)

container_push(
    name = "push_royalafg_auth",
    format = "Docker",
    image = ":royalafg_auth",
    registry = "index.docker.io",
    repository = "johnnys318/royalafg_auth",
    tag = "latest",
)
