load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/JohnnyS318/RoyalAfgInGo/services/bank",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/log",
        "//services/bank/pkg:go_default_library",
        "@com_github_mitchellh_go_homedir//:go_default_library",
        "@com_github_spf13_pflag//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)

go_binary(
    name = "bank",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
