load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/JohnnyS318/RoyalAfgInGo/services/bank",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/config:go_default_library",
        "//pkg/log",
        "//services/bank/pkg:go_default_library",
        "//services/user/pkg/serviceconfig:go_default_library",
    ],
)

go_binary(
    name = "bank",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
