load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_library(
    name = "bank_lib",
    srcs = ["main.go"],
    importpath = "github.com/JohnnyS318/RoyalAfgInGo/services/bank",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/config",
        "//pkg/log",
        "//services/bank/pkg",
        "//services/user/pkg/serviceconfig",
    ],
)

go_binary(
    name = "bank",
    embed = [":bank_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "royalafg_bank",
    embed = [":bank_lib"],
    visibility = ["//visibility:public"],
)

container_push(
    name = "push_royalafg_bank",
    format = "Docker",
    image = ":royalafg_bank",
    registry = "index.docker.io",
    repository = "johnnys318/royalafg_bank",
    tag = "dev",
)
