load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "docs_lib",
    srcs = ["main.go"],
    importpath = "github.com/JohnnyS318/RoyalAfgInGo/services/docs",
    visibility = ["//visibility:private"],
    deps = ["//services/docs/pkg/docs"],
)

go_binary(
    name = "docs",
    embed = [":docs_lib"],
    visibility = ["//visibility:public"],
)
