load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_library(
    name = "poker-matchmaker_lib",
    srcs = ["main.go"],
    importpath = "github.com/JohnnyS318/RoyalAfgInGo/services/poker-matchmaker",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/config",
        "//pkg/log",
        "//services/poker-matchmaker/pkg",
        "//services/poker-matchmaker/pkg/serviceconfig",
    ],
)

go_binary(
    name = "poker-matchmaker",
    embed = [":poker-matchmaker_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "royalafg_poker_matchmaker",
    embed = [":poker-matchmaker_lib"],
    visibility = ["//visibility:public"],
)

container_push(
    name = "push_royalafg_poker_matchmaker",
    format = "Docker",
    image = ":royalafg_poker_matchmaker",
    registry = "index.docker.io",
    repository = "johnnys318/royalafg_poker_match",
    tag = "latest",
)
