load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "poker_lib",
    srcs = ["main.go"],
    importpath = "github.com/JohnnyS318/RoyalAfgInGo/services/poker",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/config:go_default_library",
        "//pkg/log",
        "//pkg/mw",
        "//pkg/poker/models:go_default_library",
        "//pkg/utils",
        "//services/poker/bank",
        "//services/poker/gameServer:go_default_library",
        "//services/poker/handlers",
        "//services/poker/lobby",
        "//services/poker/rabbit:go_default_library",
        "//services/poker/serviceconfig:go_default_library",
        "@com_github_gorilla_mux//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@com_github_urfave_negroni//:go_default_library",
        "@dev_agones_agones//pkg/sdk:go_default_library",
        "@dev_agones_agones//sdks/go:go_default_library",
        "@org_golang_x_net//context:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_binary(
    name = "poker",
    embed = [":poker_lib"],
    visibility = ["//visibility:public"],
)
