load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "poker_lib",
    srcs = ["main.go"],
    importpath = "github.com/JohnnyS318/RoyalAfgInGo/services/poker",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/config",
        "//pkg/log",
        "//pkg/mw",
        "//pkg/poker/models",
        "//pkg/utils",
        "//services/poker/bank",
        "//services/poker/gameServer",
        "//services/poker/handlers",
        "//services/poker/lobby",
        "//services/poker/rabbit",
        "//services/poker/serviceconfig",
        "@com_github_gorilla_mux//:mux",
        "@com_github_spf13_viper//:viper",
        "@com_github_urfave_negroni//:negroni",
        "@dev_agones_agones//pkg/sdk",
        "@dev_agones_agones//sdks/go",
        "@org_golang_x_net//context",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "poker",
    embed = [":poker_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "poker_image",
    embed = [":poker_lib"],
    visibility = ["//visibility:public"],
)
