load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "protos_proto",
    srcs = ["user.proto"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["user.go"],
    importpath = "github.com/JohnnyS318/RoyalAfgInGo/services/protos",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/models:go_default_library",
        "@org_mongodb_go_mongo_driver//bson/primitive:go_default_library",
    ],
)

go_proto_library(
    name = "protos_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/JohnnyS318/RoyalAfgInGo/pkg/protos",
    proto = ":protos_proto",
    visibility = ["//visibility:public"],
)
