load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "slot_lib",
    srcs = ["main.go"],
    importpath = "github.com/JohnnyS318/RoyalAfgInGo/services/slot",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/config",
        "//pkg/log",
        "//services/auth/pkg",
        "//services/auth/pkg/serviceconfig",
    ],
)

go_binary(
    name = "slot",
    embed = [":slot_lib"],
    visibility = ["//visibility:public"],
)
