load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_library(
    name = "user_lib",
    srcs = ["main.go"],
    importpath = "github.com/JohnnyS318/RoyalAfgInGo/services/user",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/config",
        "//pkg/log",
        "//services/user/pkg",
        "//services/user/pkg/serviceconfig",
    ],
)

go_binary(
    name = "user",
    embed = [":user_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "royalafg_user",
    embed = [":user_lib"],
    visibility = ["//visibility:public"],
)

container_push(
    name = "push_royalafg_user",
    format = "Docker",
    image = ":royalafg_user",
    registry = "index.docker.io",
    repository = "johnnys318/royalafg_user",
    tag = "bazel",
)
